openshift/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    app: hello
