openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-rt
  namespace: hello-world
spec:
  to:
    kind: Service
    name: hello-sv
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
